[tool.black]
line-length = 119
target-version = ['py38']
quiet = true
exclude='''
/(
    \.git
  | \.hg
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "octoxlabs"
version = "0.2"
authors = [
  { name="Octox Labs Development Team", email="development@octoxlabs.com" },
]
description = "py-octoxlabs is an API client for Octox Labs Cyber Security Asset Management platform on python programming language."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "urllib3"
]

[project.urls]
"Homepage" = "https://github.com/octoxlabs/py-octoxlabs"
